# roo-haskell

./: .gitignore  AGENTS.md  README.md  generate.sh  rebuild.sh  roo-haskell.cabal
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
app/: Main.hs
openapi/: openai-chat.yaml
plans/: haskell-project-plan.md  openai-api-integration-plan.md
src/: ListUtils.hs
src/OpenAI/: Client.hs  Generated.hs
test/: ListUtilsSpec.hs  OpenAIClientSpec.hs
