cabal-version:      3.8
name:               roo-haskell
version:            0.1.0.0
synopsis:           A list utility library with OpenAI-compatible API client
description:        A Haskell library providing safe list operations and common list
                    manipulation functions with comprehensive test coverage using
                    HSpec and QuickCheck. Also includes a client for OpenAI-compatible
                    chat completion APIs.
license:            MIT
author:             Roo
maintainer:         roo@example.com
category:           Data
build-type:         Simple
extra-doc-files:    README.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        ListUtils
        OpenAI.Client
        OpenAI.Client.Generated
        OpenAI.Client.Generated.Common
        OpenAI.Client.Generated.Configuration
        OpenAI.Client.Generated.SecuritySchemes
        OpenAI.Client.Generated.TypeAlias
        OpenAI.Client.Generated.Types
        OpenAI.Client.Generated.Operations.CreateChatCompletion
        OpenAI.Client.Generated.Types.ChatCompletionRequest
        OpenAI.Client.Generated.Types.ChatCompletionResponse
        OpenAI.Client.Generated.Types.ChatMessage
        OpenAI.Client.Generated.Types.Choice
        OpenAI.Client.Generated.Types.Usage
    build-depends:    
        base >= 4.7 && < 5,
        -- JSON serialization
        aeson >= 2.0 && < 3,
        -- HTTP client
        http-client >= 0.7 && < 1,
        http-client-tls >= 0.3 && < 1,
        http-conduit >= 2.3 && < 3,
        http-types >= 0.12 && < 1,
        -- Text and binary handling
        text >= 1.2 && < 3,
        bytestring >= 0.10 && < 1,
        -- Additional dependencies for generated code
        ghc-prim,
        unordered-containers >= 0.2 && < 1,
        vector >= 0.12 && < 1,
        scientific >= 0.3 && < 1,
        time >= 1.9 && < 2,
        mtl >= 2.2 && < 3,
        transformers >= 0.5 && < 1
    hs-source-dirs:   src
    default-language: Haskell2010

executable roo-haskell-exe
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >= 4.7 && < 5,
        roo-haskell
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite roo-haskell-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    
        ListUtilsSpec
        OpenAIClientSpec
    build-depends:
        base >= 4.7 && < 5,
        roo-haskell,
        hspec >= 2.0,
        QuickCheck >= 2.0,
        text >= 1.2 && < 3
    build-tool-depends: hspec-discover:hspec-discover >= 2.0
    hs-source-dirs:   test
    default-language: Haskell2010
